--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "emotion-reset": "^2.0.7",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
